@@ -369,19 +369,52 @@ class CoursePress_Admin_Edit {
 	 * @return string WP Editor.
 	 */
 	private static function get_wp_editor( $editor_id, $editor_name, $editor_content = '', $args = array() ) {
+		wp_enqueue_script( 'post' );
+		$_wp_editor_expand = $_content_editor_dfw = false;
+
+		$post_type = CoursePress_Data_Course::get_post_type_name();
+		global $is_IE;
+
+		if (
+			! wp_is_mobile()
+			&& ! ( $is_IE && preg_match( '/MSIE [5678]/', $_SERVER['HTTP_USER_AGENT'] ) )
+			&& apply_filters( 'wp_editor_expand', true, $post_type )
+		) {
+
+			wp_enqueue_script( 'editor-expand' );
+			$_content_editor_dfw = true;
+			$_wp_editor_expand = ( get_user_setting( 'editor_expand', 'on' ) === 'on' );
+		}
+
+		if ( wp_is_mobile() ) {
+			wp_enqueue_script( 'jquery-touch-punch' );
+		}
+
+		/** This filter is documented in wp-includes/class-wp-editor.php  */
+		add_filter( 'teeny_mce_plugins', array( __CLASS__, 'teeny_mce_plugins' ) );
+
 		$defaults = array(
+			'_content_editor_dfw' => $_content_editor_dfw,
+			'drag_drop_upload' => true,
+			'tabfocus_elements' => 'content-html,save-post',
 			'textarea_name' => $editor_name,
 			'editor_class' => 'cp-editor cp-course-overview',
 			'media_buttons' => false,
+			'editor_height' => 300,
 			'tinymce' => array(
-				'height' => '300',
+				'resize' => false,
+				'wp_autoresize_on' => $_wp_editor_expand,
+				'add_unload_trigger' => false,
 			),
 		);
 		$args = wp_parse_args( $args, $defaults );
 		$args = apply_filters( 'coursepress_element_editor_args', $args, $editor_name, $editor_id );
+
 		ob_start();
 		wp_editor( $editor_content, $editor_id, $args );
-		$editor_html = ob_get_clean();
+		$editor_html = sprintf( '<div class="postarea%s">', $_wp_editor_expand? ' wp-editor-expand':'' );
+		$editor_html .= ob_get_clean();
+		$editor_html .= '</div>';
 		return $editor_html;
 	}
 
@@ -1613,5 +1646,19 @@ class CoursePress_Admin_Edit {
 			return '&ndash;';
 		}
 		return $duration;
+	}
+
+	/**
+	 * Add tinymce plugins
+	 *
+	 * @since 2.0.6
+	 *
+	 * @param array $plugins An array of teenyMCE plugins.
+	 * @return array The list of teenyMCE plugins.
+	 */
+	public static function teeny_mce_plugins( $plugins ) {
+		$plugins[] = 'paste';
+		$plugins[] = 'wpautoresize';
+		return $plugins;
 	}
 }
