@@ -7,6 +7,7 @@ CHANGELOG
 
 = 2.0.6 =
 -------------------------------------------------
+* Improved TinyMCE editor on course edit screen.
 
 = 2.0.5 =
 -------------------------------------------------
